<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FragmentGeneralStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.leonardo.apps.sensors.AmbientSensorsFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAmbientTempSensorName"
                style="@style/SensorLabelsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/ambient_temp_sensor_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvAmbientTempValName"
                style="@style/SensorAxisStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/value_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAmbientTempSensorName" />

            <TextView
                android:id="@+id/tvAmbientTempSensorValue"
                style="@style/SensorValuesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available_text"
                app:layout_constraintStart_toEndOf="@+id/tvAmbientTempValName"
                app:layout_constraintTop_toBottomOf="@+id/tvAmbientTempSensorName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvLightSensorName"
                style="@style/SensorLabelsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/light_sensor_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLightValName"
                style="@style/SensorAxisStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/value_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLightSensorName" />

            <TextView
                android:id="@+id/tvLightSensorValue"
                style="@style/SensorValuesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available_text"
                app:layout_constraintStart_toEndOf="@id/tvLightValName"
                app:layout_constraintTop_toBottomOf="@id/tvLightSensorName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPressureSensorName"
                style="@style/SensorLabelsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/pressure_sensor_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPressureSensorValue"
                style="@style/SensorValuesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available_text"
                app:layout_constraintStart_toEndOf="@id/tvPressureValName"
                app:layout_constraintTop_toBottomOf="@id/tvPressureSensorName" />

            <TextView
                android:id="@+id/tvPressureValName"
                style="@style/SensorAxisStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/value_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPressureSensorName" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRelHumiditySensorName"
                style="@style/SensorLabelsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/relative_humidity_sensor_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRelHumiditySensorValue"
                style="@style/SensorValuesStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_available_text"
                app:layout_constraintStart_toEndOf="@id/tvRelHumidityName"
                app:layout_constraintTop_toBottomOf="@id/tvRelHumiditySensorName" />

            <TextView
                android:id="@+id/tvRelHumidityName"
                style="@style/SensorAxisStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/value_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRelHumiditySensorName" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>